<resources>
    <string name="app_name">My POD</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="photo_of_the_earth">Photo of the Earth</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="todayButtonText">Today POD</string>
    <string name="yesterdayButtonText">Yesterday POD</string>
    <string name="beforeYesterdayButtonText">Yesterday-1 POD</string>
    <string name="date_of_POD">date of POD</string>
    <string name="choose_theme">Choose theme</string>
    <string name="mars_theme">Mars</string>
    <string name="moon_theme">Moon</string>
    <string name="cosmos_theme">Cosmos</string>
    <string name="default_theme">default_theme</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="weather">Weather</string>
    <string name="change_visibility">Change Visibility</string>
    <string name="make_barrier">Show barrier</string>
    <string name="button_becomes_longer">button becomes longer</string>
    <string name="circular_button_text">Open POD</string>
    <string name="enlargeScreen_button_text">Show Enlarge</string>
    <string name="notice_title_text">Новая заметка</string>
    <string name="notice_description_text">Содержимое заметки</string>
    <string name="barrier_works">Barrier works</string>
    <string name="request_date">Request date</string>
</resources>