<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_podbutton"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_POD"
        app:layout_constraintBottom_toTopOf="@+id/date_of_PODControl"
        app:layout_constraintEnd_toStartOf="@+id/request_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/date_of_PODControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_POD"
        app:layout_constraintBottom_toTopOf="@+id/image_view"
        app:layout_constraintEnd_toStartOf="@+id/request_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_date"
        app:layout_constraintBottom_toTopOf="@+id/request_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date_of_PODControl"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/request_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_date"
        app:layout_constraintBottom_toTopOf="@+id/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date_of_PODControl"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.example.mypod.EquilateralImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/photo_of_the_day_stub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_no_photo_vector" />

</androidx.constraintlayout.widget.ConstraintLayout>